# multiplayer-quiz

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: leader_board.py  main.py  models.py  quiz.py  websocket.py
