[project]
name = "quiz"
version = "0.1.0"
description = ""
authors = [
    {name = "Rishav",email = "rishishah907@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
